--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Etch-A-Sketch</h1> 
     <form>
         <label for="newdim">New square dimensions (max 100): </label>    
-        <div><input type="number" name="newdim" placeholder="16" min="1" max="100">
+        <div><input type="number" name="newdim" value="16" min="1" max="100">
         <input type="submit" name="submit" value="Submit"></div>
     </form>
     <div class="etch-container"></div>
