--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <form>
         <label for="newdim">New square dimensions (max 100): </label>    
         <div><input type="number" name="newdim" value="16" min="1" max="100">
-        <input type="submit" name="submit" value="Submit"></div>
+        <input type="submit" name="submit" value="Redraw Board"></div>
     </form>
     <div class="etch-container"></div>
 </body>
