--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Etch-A-Sketch</h1> 
     <form>
-        <label for="newdim">New square dimensions (max 100): </label>    
+        <label for="newdim">Resolution (max 100): </label>    
         <div><input type="number" name="newdim" value="16" min="1" max="100">
         <input type="submit" name="submit" value="Redraw Board"></div>
     </form>
